fix checkstyle issues